--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,14 +1,17 @@
 /*Fonts - imported as needed*/
 @font-face {
-    font-family: 'Helvetica Now Display';
-    src: url('../fonts/Helvetica/Monotype - Helvetica Now Display.otf');
-    font-weight: normal;
+    font-family: 'Helvetica Now Display Reg';
+    src: url('../fonts/Helvetica/Monotype - Helvetica Now Display Light.otf');
 }
 
 @font-face {
-    font-family: 'Helvetica Now Display';
+    font-family: 'Helvetica Now Display Med';
+    src: url('../fonts/Helvetica/Monotype - Helvetica Now Display Medium.otf');
+}
+
+@font-face {
+    font-family: 'Helvetica Now Display Bold';
     src: url('../fonts/Helvetica/Monotype - Helvetica Now Display Bold.otf');
-    font-weight: 700;
 }
 
 /*Resets*/
@@ -23,20 +26,145 @@ a {
 }
 
 body {
-    font-family: 'Helvetica Now Display', sans-serif;
-    font-weight: normal;
+    font-family: 'Helvetica Now Display Reg', sans-serif;
     max-width: 1440px;
     margin: auto;
+    font-size: var(--font-reg);
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 700;
+    font-family: 'Helvetica Now Display Bold', sans-serif;
 }
 
 /*Variables */
+:root {
+    --primary-text: #000000;
+    --text-inverse: #fff;
+    --grey: #474747;
+    --font-reg: 18px;
+}
 
 /*Utilities */
 .wrapper {
     width: 80%;
     margin: auto;
+}
+
+.flex-between-center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/*Styles */
+.header {
+    margin-top: 57px;
+}
+
+.header__nav-hamburger {
+    background: unset;
+    border: none;
+    cursor: pointer;
+}
+
+.header__join {
+    display: block;
+    color: var(--text-inverse);
+    background: var(--primary-text);
+    border-radius: 100px;
+    width: 104px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+
+.header__join:hover {
+    color: var(--primary-text);
+    background: var(--text-inverse);
+    font-family: 'Helvetica Now Display Med', sans-serif;;
+    -webkit-box-shadow: 1px 3px 15px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 3px 15px 2px rgba(0, 0, 0, 0.5);
+}
+
+.header__join--modal {
+    background: var(--grey);
+}
+
+.header__modal {
+    display: none;
+}
+
+.header__modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(227, 227, 227, 1) /* Black w/ opacity */
+}
+
+.header__modal__container {
+    background-color: var(--primary-text);
+}
+
+.header__modal__content {
+    color: var(--text-inverse);
+    padding: 57px 0 224px;
+    animation: fadein .5s;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.header__modal__close {
+    color: #aaaaaa;
+    font-size: 50px;
+    line-height: 50px;
+}
+
+.header__modal__close:hover,
+.header__modal__close:focus {
+    color: var(--text-inverse);
+    cursor: pointer;
+}
+
+.header__modal__list {
+    list-style: none;
+    margin-top: 80px;
+    font-size: 32px;
+}
+
+.header__modal__list li {
+    margin-bottom: 16px;;
+}
+
+.header__modal__list a {
+    position: relative;
+    color: var(--text-inverse);
+}
+
+.header__modal__list a:hover:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background: var(--text-inverse);
+    bottom: -4px;
+    left: 0;
+}
+
+@media (max-width: 650px) {
+    .header__modal__content {
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
 }
