--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -56,6 +56,15 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
 }
 
+.headings-large {
+    line-height: 73px;
+}
+
+.h4 {
+    font-size: 24px;
+    line-height: 35px;
+}
+
 /*Styles */
 .header {
     margin-top: 57px;
@@ -162,9 +171,58 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
 }
 
+.hero-section {
+    margin-top: 100px;
+}
+
+.hero-section h1 {
+    font-size: 90px;
+}
+
+.hero-section h4 {
+    width: 33%;
+}
+
+.first-section h2 {
+    font-size: 72px;
+}
+
+.first-section h4 {
+    width: 40%;
+}
+
+
+
+
+/*Media Queries*/
 @media (max-width: 650px) {
+    .wrapper {
+        width: 90%;
+    }
+
     .header__modal__content {
-        padding-left: 3rem;
-        padding-right: 3rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+}
+
+@media (max-width: 1250px) {
+    section .flex-between-center {
+        flex-direction: column;
+        align-items: unset;
+    }
+
+    .hero-section h1 {
+        margin-bottom: 2rem;
+        font-size: 3.75rem;
+        line-height: 3.75rem;
+    }
+
+    .first-section h2 {
+        font-size: 3rem;
+    }
+
+    .hero-section h4, .first-section h4 {
+        width: 100%;
     }
 }
