--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -172,6 +172,8 @@ h1, h2, h3, h4, h5, h6 {
     color: #aaaaaa;
     font-size: 50px;
     line-height: 50px;
+    background: unset;
+    border: none;
 }
 
 .header__modal__close:hover,
